--- a/design/main_window.ui
+++ b/design/main_window.ui
@@ -127,7 +127,7 @@ QCheckBox {
      <string notr="true"/>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="mainPageWidget">
      <widget class="QFrame" name="toolsBarFrame">
@@ -482,9 +482,9 @@ QCheckBox {
          <widget class="QLineEdit" name="domainLineEdit"/>
         </item>
         <item>
-         <widget class="QLabel" name="loginLabel">
+         <widget class="QLabel" name="usernameLabel">
           <property name="text">
-           <string>Login</string>
+           <string>Username</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -492,7 +492,7 @@ QCheckBox {
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="loginLineEdit"/>
+         <widget class="QLineEdit" name="usernameLineEdit"/>
         </item>
         <item>
          <widget class="QLabel" name="passwordLabel">
@@ -508,7 +508,7 @@ QCheckBox {
          <widget class="QLineEdit" name="passwordLineEdit"/>
         </item>
         <item>
-         <widget class="QCheckBox" name="checkBox">
+         <widget class="QCheckBox" name="requiredAdminRightsCheckBox">
           <property name="text">
            <string>Required Admin Rights</string>
           </property>
