--- a/design/password_query.ui
+++ b/design/password_query.ui
@@ -100,7 +100,7 @@ QLabel {
      </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QLabel" name="label">
+     <widget class="QLabel" name="adminLabel">
       <property name="text">
        <string>Protected With Admin Rights</string>
       </property>
